--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="box col-sm col-md-4 col-lg-3">
             <img
               class="portfolio-imgs"
-              src="imgs/work-01.JPG"
+              src="imgs/work-01.jpg"
               class="Portfolio-imgs"
               alt=""
             />
@@ -68,7 +68,7 @@
           <div class="box col-sm col-md-4 col-lg-3">
             <img
               class="portfolio-imgs"
-              src="imgs/work-02.JPG"
+              src="imgs/work-02.jpg"
               class="Portfolio-imgs"
               alt=""
             />
@@ -78,7 +78,7 @@
           <div class="box col-sm col-md-4 col-lg-3">
             <img
               class="portfolio-imgs"
-              src="imgs/work-03.JPG"
+              src="imgs/work-03.jpg"
               class="Portfolio-imgs"
             />
             <h3 class="pt-2">Graphic Photo</h3>
